proxy/http/HttpTransact.h
@@ -1017,6 +1017,7 @@ public:
     OverridableHttpConfigParams my_txn_conf; // Storage for plugins, to avoid malloc
 
     bool transparent_passthrough;
+    bool range_in_cache;
     
     // Methods
     void
@@ -1112,7 +1113,8 @@ public:
         range_output_cl(0),
         ranges(NULL),
         txn_conf(NULL),
-        transparent_passthrough(false)
+        transparent_passthrough(false),
+        range_in_cache(false)
     {
       int i;
       char *via_ptr = via_string;
